--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ main {
   display: flex;
   justify-content: space-between;
   width: 100%;
-
   color: #fff;
 }
 main section:first-of-type {
@@ -92,10 +91,36 @@ button {
   font-family: inherit;
   font-size: 16px;
   font-weight: 700;
-  padding: 10px;
+  padding: 15px;
   line-height: 20px;
   letter-spacing: -0.17px;
   border: none;
   background-color: #c0df33;
   color: #fff;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    padding: 30px;
+    height: auto;
+  }
+  main {
+    flex-direction: column;
+  }
+  main section:first-of-type {
+    width: 100%;
+  }
+  main section:last-of-type {
+    width: 100%;
+  }
+  h1 {
+    font-size: 20px;
+  }
+  header h2 {
+    font-size: 15px;
+  }
+  header p {
+    font-size: 14px;
+  }
 }
