--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
   flex-direction: column;
   justify-content: space-around;
   font-family: "Karla", sans-serif;
+  border-radius: 8px;
+  overflow: hidden;
 }
 header {
   display: flex;
@@ -32,10 +34,13 @@ header {
 h1 {
   font-size: 24px;
   font-weight: 700;
+  letter-spacing: -0.3px;
+  color: #2ab3b1;
 }
 h2 {
   font-size: 18px;
   font-weight: 700;
+  letter-spacing: -0.22px;
 }
 p {
   font-size: 16px;
@@ -45,6 +50,9 @@ p {
 }
 header p {
   color: #9aa7be;
+}
+header h2 {
+  color: #c0df33;
 }
 
 main {
@@ -100,7 +108,7 @@ button {
   border-radius: 5px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
   body {
     padding: 30px;
     height: auto;
